--- a/VandyMobile/MeetingDetailViewController.xib
+++ b/VandyMobile/MeetingDetailViewController.xib
@@ -106,6 +106,7 @@
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<bool key="IBMKZoomEnabled">NO</bool>
 						<bool key="IBMKScrollEnabled">NO</bool>
@@ -114,7 +115,7 @@
 					<object class="IBUILabel" id="105274477">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{139, 20}, {161, 22}}</string>
+						<string key="NSFrame">{{139, 16}, {161, 22}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1007069218"/>
@@ -125,14 +126,14 @@
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<string key="IBUIText">First Last</string>
-						<object class="NSColor" key="IBUITextColor" id="842444436">
+						<object class="NSColor" key="IBUITextColor" id="500117823">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MCAwIDAAA</bytes>
 						</object>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">10</float>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="830491952">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="698937744">
 							<string key="name">Helvetica-Bold</string>
 							<string key="family">Helvetica</string>
 							<int key="traits">2</int>
@@ -154,11 +155,11 @@
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<string key="IBUIText">January 1, 2000</string>
-						<reference key="IBUITextColor" ref="842444436"/>
+						<reference key="IBUITextColor" ref="500117823"/>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">10</float>
-						<reference key="IBUIFontDescription" ref="830491952"/>
+						<reference key="IBUIFontDescription" ref="698937744"/>
 						<reference key="IBUIFont" ref="186385879"/>
 					</object>
 					<object class="IBUILabel" id="595974921">
@@ -175,11 +176,11 @@
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<string key="IBUIText">Food served!</string>
-						<reference key="IBUITextColor" ref="842444436"/>
+						<reference key="IBUITextColor" ref="500117823"/>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">10</float>
-						<reference key="IBUIFontDescription" ref="830491952"/>
+						<reference key="IBUIFontDescription" ref="698937744"/>
 						<reference key="IBUIFont" ref="186385879"/>
 					</object>
 					<object class="IBUITextView" id="69807349">
@@ -233,11 +234,11 @@
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<string key="IBUIText">7 PM - 9 PM</string>
-						<reference key="IBUITextColor" ref="842444436"/>
+						<reference key="IBUITextColor" ref="500117823"/>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">10</float>
-						<reference key="IBUIFontDescription" ref="830491952"/>
+						<reference key="IBUIFontDescription" ref="698937744"/>
 						<reference key="IBUIFont" ref="186385879"/>
 					</object>
 				</array>
@@ -403,10 +404,10 @@ AAgACAAIAAEAAQABAAE</bytes>
 							<reference ref="1060652608"/>
 							<reference ref="200936773"/>
 							<reference ref="69807349"/>
-							<reference ref="105274477"/>
 							<reference ref="1007069218"/>
-							<reference ref="890897481"/>
 							<reference ref="595974921"/>
+							<reference ref="105274477"/>
+							<reference ref="890897481"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
